feat: 아이콘, 스플래시 이미지 추가

--- a/PhotoMemo/Storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="oBv-RD-pEo">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oBv-RD-pEo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ci7-y6-0gt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oBv-RD-pEo" secondAttribute="trailing" id="DIN-Wn-KoV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="oBv-RD-pEo" secondAttribute="bottom" id="eME-Jw-c1T"/>
+                            <constraint firstItem="oBv-RD-pEo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wk7-UX-vGS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="splash" width="207" height="443"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
