--- a/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NIm-Oi-9VU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NIm-Oi-9VU">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -315,52 +315,59 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bxW-W4-SYk">
-                                <rect key="frame" x="67" y="269.5" width="297" height="34"/>
+                                <rect key="frame" x="67" y="403.5" width="297" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ogx-XH-Eyu">
-                                <rect key="frame" x="67" y="359.5" width="297" height="34"/>
+                                <rect key="frame" x="67" y="493.5" width="297" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVG-eA-y4U">
-                                <rect key="frame" x="30" y="276" width="17" height="21"/>
+                                <rect key="frame" x="30" y="410" width="17" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5c-zB-kjh">
-                                <rect key="frame" x="30" y="366" width="26.5" height="21"/>
+                                <rect key="frame" x="30" y="500" width="26.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoMemo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9y-bQ-UqI">
-                                <rect key="frame" x="97" y="160" width="220" height="51"/>
+                                <rect key="frame" x="97" y="294" width="220" height="51"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHO-q2-F2n">
-                                <rect key="frame" x="307" y="448" width="57" height="30"/>
+                                <rect key="frame" x="307" y="582" width="57" height="30"/>
                                 <state key="normal" title="Register"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOo-HP-0Rn">
-                                <rect key="frame" x="67" y="448" width="38" height="30"/>
+                                <rect key="frame" x="67" y="582" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="tJt-57-SNo">
+                                <rect key="frame" x="138" y="148" width="138" height="138"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Inv-33-okm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Q9y-bQ-UqI" firstAttribute="top" secondItem="Inv-33-okm" secondAttribute="top" constant="20" id="GcB-6C-ffy"/>
+                            <constraint firstItem="tJt-57-SNo" firstAttribute="centerX" secondItem="Inv-33-okm" secondAttribute="centerX" id="Axp-YL-ZMz"/>
+                            <constraint firstItem="tJt-57-SNo" firstAttribute="height" secondItem="EdL-Mf-5RV" secondAttribute="width" multiplier="1/3" id="B7p-4w-FTX"/>
+                            <constraint firstItem="Q9y-bQ-UqI" firstAttribute="top" secondItem="tJt-57-SNo" secondAttribute="bottom" constant="8" id="GcB-6C-ffy"/>
+                            <constraint firstItem="tJt-57-SNo" firstAttribute="width" secondItem="EdL-Mf-5RV" secondAttribute="width" multiplier="1/3" id="Gdz-8p-hHd"/>
                             <constraint firstItem="ogx-XH-Eyu" firstAttribute="centerY" secondItem="C5c-zB-kjh" secondAttribute="centerY" id="PH8-dV-q23"/>
                             <constraint firstItem="aHO-q2-F2n" firstAttribute="centerY" secondItem="iOo-HP-0Rn" secondAttribute="centerY" id="T7C-VE-4bw"/>
                             <constraint firstItem="ogx-XH-Eyu" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="C5c-zB-kjh" secondAttribute="trailing" constant="8" id="TpS-fh-lVI"/>
                             <constraint firstItem="oVG-eA-y4U" firstAttribute="leading" secondItem="Inv-33-okm" secondAttribute="leading" constant="30" id="USr-br-gLT"/>
                             <constraint firstItem="C5c-zB-kjh" firstAttribute="leading" secondItem="oVG-eA-y4U" secondAttribute="leading" id="WjI-0A-i7k"/>
                             <constraint firstItem="Inv-33-okm" firstAttribute="trailing" secondItem="bxW-W4-SYk" secondAttribute="trailing" constant="50" id="aCg-iB-iop"/>
+                            <constraint firstItem="tJt-57-SNo" firstAttribute="top" secondItem="Inv-33-okm" secondAttribute="top" constant="8" id="c3o-4O-sdR"/>
                             <constraint firstItem="ogx-XH-Eyu" firstAttribute="trailing" secondItem="bxW-W4-SYk" secondAttribute="trailing" id="ef7-di-TOS"/>
                             <constraint firstItem="bxW-W4-SYk" firstAttribute="leading" secondItem="oVG-eA-y4U" secondAttribute="trailing" constant="20" id="f5B-fh-UL1"/>
                             <constraint firstItem="aHO-q2-F2n" firstAttribute="trailing" secondItem="ogx-XH-Eyu" secondAttribute="trailing" id="hJM-49-BXB"/>
@@ -411,6 +418,7 @@
         <image name="AddPhoto_kor" width="708" height="495"/>
         <image name="arrow.clockwise.icloud" catalog="system" width="128" height="88"/>
         <image name="gearshape.fill" catalog="system" width="128" height="121"/>
+        <image name="icon" width="180" height="180"/>
         <image name="lock.slash" catalog="system" width="124" height="128"/>
         <image name="pencil.and.outline" catalog="system" width="128" height="128"/>
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
